--- a/benchmarks/HRNet-Semantic-Segmentation-HRNet-OCR/experiments/rellis/seg_hrnet_ocr_w48_train_512x1024_sgd_lr1e-2_wd5e-4_bs_12_epoch484.yaml
+++ b/benchmarks/HRNet-Semantic-Segmentation-HRNet-OCR/experiments/rellis/seg_hrnet_ocr_w48_train_512x1024_sgd_lr1e-2_wd5e-4_bs_12_epoch484.yaml
@@ -2,10 +2,10 @@ CUDNN:
   BENCHMARK: true
   DETERMINISTIC: false
   ENABLED: true
-GPUS: (2,3)
+GPUS: (0,1)
 OUTPUT_DIR: 'output'
 LOG_DIR: 'log'
-WORKERS: 1
+WORKERS: 8
 PRINT_FREQ: 10
 
 DATASET:
@@ -78,11 +78,11 @@ TRAIN:
   - 1024
   - 640
   BASE_SIZE: 1920
-  BATCH_SIZE_PER_GPU: 1
+  BATCH_SIZE_PER_GPU: 4
   SHUFFLE: true
   BEGIN_EPOCH: 0
-  END_EPOCH: 484
-  RESUME: true
+  END_EPOCH: 100
+  RESUME: false
   OPTIMIZER: sgd
   LR: 0.01
   WD: 0.0005
@@ -98,6 +98,6 @@ TEST:
   - 1920
   - 1200
   BASE_SIZE: 1920
-  BATCH_SIZE_PER_GPU: 1
+  BATCH_SIZE_PER_GPU: 4
   FLIP_TEST: false
   MULTI_SCALE: false
